--- a/Bridel'sGameEngine/imgui.ini
+++ b/Bridel'sGameEngine/imgui.ini
@@ -144,7 +144,17 @@ Size=338,204
 Collapsed=0
 
 [Window][Plane]
-Pos=22,356
+Pos=20,339
 Size=158,289
+Collapsed=0
+
+[Window][Cube]
+Pos=186,355
+Size=158,289
+Collapsed=0
+
+[Window][Wall]
+Pos=184,338
+Size=258,218
 Collapsed=0
 
