--- a/Bridel'sGameEngine/imgui.ini
+++ b/Bridel'sGameEngine/imgui.ini
@@ -84,14 +84,14 @@ Size=338,94
 Collapsed=0
 
 [Window][Camera]
-Pos=938,14
-Size=339,226
-Collapsed=0
+Pos=8,33
+Size=311,204
+Collapsed=1
 
 [Window][Light]
-Pos=12,10
-Size=356,314
-Collapsed=0
+Pos=7,12
+Size=313,314
+Collapsed=1
 
 [Window][Box 69]
 Pos=26,57
@@ -144,9 +144,9 @@ Size=338,204
 Collapsed=0
 
 [Window][Plane]
-Pos=20,339
-Size=158,289
-Collapsed=0
+Pos=7,36
+Size=310,289
+Collapsed=1
 
 [Window][Cube]
 Pos=186,355
@@ -154,7 +154,42 @@ Size=158,289
 Collapsed=0
 
 [Window][Wall]
-Pos=184,338
-Size=258,218
+Pos=7,36
+Size=310,220
 Collapsed=0
+
+[Window][gobber]
+Pos=10,102
+Size=307,485
+Collapsed=1
+
+[Window][Nano]
+Pos=8,96
+Size=310,206
+Collapsed=1
+
+[Window][muro]
+Pos=9,125
+Size=307,486
+Collapsed=1
+
+[Window][Gobber]
+Pos=8,140
+Size=305,546
+Collapsed=1
+
+[Window][Muro]
+Pos=8,118
+Size=308,483
+Collapsed=1
+
+[Window][Wall_1]
+Pos=8,54
+Size=311,209
+Collapsed=1
+
+[Window][Wall_2]
+Pos=8,75
+Size=310,205
+Collapsed=1
 
