--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,7 @@ StyleCopReport.xml
 *.ilk
 *.meta
 *.obj
-!Bridel'sGameEngine/Models/*.obj
+!Bridel'sGameEngine/Models/**/*.obj
 *.iobj
 *.pch
 *.pdb
