Blender factor, two translucent panes

--- a/Bridel'sGameEngine/imgui.ini
+++ b/Bridel'sGameEngine/imgui.ini
@@ -144,8 +144,8 @@ Size=338,204
 Collapsed=0
 
 [Window][Plane]
-Pos=7,36
-Size=310,289
+Pos=8,75
+Size=310,248
 Collapsed=1
 
 [Window][Cube]
@@ -196,5 +196,15 @@ Collapsed=1
 [Window][Sponza]
 Pos=10,53
 Size=308,656
+Collapsed=1
+
+[Window][Blue Plane]
+Pos=10,76
+Size=309,245
+Collapsed=1
+
+[Window][Red Plane]
+Pos=9,100
+Size=308,248
 Collapsed=1
 
