--- a/Bridel'sGameEngine/Bridel'sGameEngine.vcxproj
+++ b/Bridel'sGameEngine/Bridel'sGameEngine.vcxproj
@@ -47,8 +47,8 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
-    <LibraryPath>C:\Program Files\Assimp\lib\x64;C:\Program Files\Assimp\bin\x64;$(LibraryPath)</LibraryPath>
-    <IncludePath>C:\Program Files\Assimp\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)dxtex\bin;C:\Program Files\Assimp\lib\x64;C:\Program Files\Assimp\bin\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)\dxtex\include;C:\Program Files\Assimp\include;$(IncludePath)</IncludePath>
     <SourcePath>C:\Program Files\Assimp\code;$(SourcePath)</SourcePath>
     <ExecutablePath>C:\Program Files\Assimp\bin\x64;$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
@@ -56,8 +56,8 @@
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
-    <LibraryPath>C:\Program Files\Assimp\lib\x64;C:\Program Files\Assimp\bin\x64;$(LibraryPath)</LibraryPath>
-    <IncludePath>C:\Program Files\Assimp\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)dxtex\bin;C:\Program Files\Assimp\lib\x64;C:\Program Files\Assimp\bin\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)\dxtex\include;C:\Program Files\Assimp\include;$(IncludePath)</IncludePath>
     <SourcePath>C:\Program Files\Assimp\code;$(SourcePath)</SourcePath>
     <ExecutablePath>C:\Program Files\Assimp\bin\x64;$(ExecutablePath)</ExecutablePath>
   </PropertyGroup>
@@ -75,6 +75,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>Debug\DirectXTex.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -98,6 +99,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>Release\DirectXTex.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
