--- a/Bridel'sGameEngine/imgui.ini
+++ b/Bridel'sGameEngine/imgui.ini
@@ -89,7 +89,7 @@ Size=311,204
 Collapsed=1
 
 [Window][Light]
-Pos=7,12
+Pos=8,11
 Size=313,314
 Collapsed=1
 
@@ -164,7 +164,7 @@ Size=307,485
 Collapsed=1
 
 [Window][Nano]
-Pos=8,96
+Pos=8,74
 Size=310,206
 Collapsed=1
 
@@ -179,9 +179,9 @@ Size=305,546
 Collapsed=1
 
 [Window][Muro]
-Pos=8,118
+Pos=9,93
 Size=308,483
-Collapsed=1
+Collapsed=0
 
 [Window][Wall_1]
 Pos=8,54
@@ -207,4 +207,9 @@ Collapsed=1
 Pos=9,100
 Size=308,248
 Collapsed=1
+
+[Window][Loading!!!]
+Pos=60,60
+Size=32,35
+Collapsed=0
 
